@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.7.0 [unreleased]
 
+  Added support for o.a.h.m.l.CombineFileInputFormat in the Hadoop specific c.t.h.PartitionTap implementation.
+
   Fixed issue where a failure to open or write a trap would pass the throwable up to the prior trap. Failures on trap
   io will now result in a c.f.Flow failure.
 
